--- a/composer.json
+++ b/composer.json
@@ -1,19 +1,30 @@
 {
+    "version": "2.0.0",
     "name": "gustavoeklund/expr-php",
-    "description": "Ultra lightweight, blazing fast and simple to use RESTful library",
+    "description": "Ultra lightweight, blazing fast and simple to use RESTful API library",
     "type": "library",
     "license": "MIT",
+    "minimum-stability": "dev",
     "authors": [
         {
             "name": "Gustavo Eklund",
             "email": "gustavo04616@gmail.com"
         }
     ],
-    "minimum-stability": "stable",
-    "require": {},
+    "require": {
+        "ext-json": "*"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^9.5"
+    },
     "autoload": {
         "psr-4": {
             "Expr\\": "./src"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Expr\\Tests\\": "./tests"
         }
     }
 }
