--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
     },
     "autoload-dev": {
         "psr-4": {
+            "Expr\\Tests\\Mocks\\": "./tests/Mocks",
             "Expr\\Tests\\": "./tests"
         }
     }
